# time_capsule

./: CMakeLists.txt  README.md  cli.cpp
include/: chat_data.h  main_window.h  message_widget.h
src/: chat_data.cpp  main.cpp  main_window.cpp  message_widget.cpp
